# VideoMonitor

./: .dockerignore  .env.example  .gitignore  Dockerfile  PUSH_CHECKLIST.md  README.md  docker-compose.yml  pyproject.toml  requirements-server.txt  requirements.txt  run_pz7.py  run_pz7_openrouter.py  run_pz7_vlm.py
.github/workflows/: ci.yml
docs/: content_taxonomy.md  contract.md  coursework.md  defense_guide.md  deploy.md  linza.detector-rest-api.yml  pz1.md  pz2.md  pz3.md  pz4.md  pz5.md  pz6.md  pz7.md  pz8.md  service_overview.md  time_based_report.sample.json
scripts/: build_release.py  smoke_api.py  verify_contract.py
src/: api.py  common.py  content_taxonomy.py  contract.py  coursework_pipeline.py  dto.py  pz1_counters.py  pz2_slicer.py  pz3_subtitles.py  pz4_whisper.py  pz5_yolo.py  pz6_resnet.py  pz7_llm.py  pz7_openrouter.py  pz7_vlm_gemini.py  pz8_postprocess.py
tests/: test_api_contract.py  test_contract.py  test_pz7_vlm.py
