[project]
name = "analyz-dannyx-coursework"
version = "1.0.1"
description = "Coursework pipeline and Linza.Detector-compatible REST API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "opencv-python==4.10.0.84",
    "numpy==1.26.4",
    "Pillow==11.0.0",
    "easyocr==1.7.2",
    "ffmpeg-python==0.2.0",
    "yt-dlp==2025.10.22",
    "gdown==5.2.0",
    "requests==2.32.3",
    "tqdm==4.67.1",
    "pandas==2.2.3",
    "openpyxl==3.1.5",
    "PyYAML==6.0.2",
    "rapidfuzz==3.10.1",
    "loguru==0.7.2",
    "python-dotenv==1.0.1",
    "pydantic==2.10.3",
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.20",
]

[project.optional-dependencies]
server = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.20",
]
dev = [
    "pytest>=8,<9",
    "ruff>=0.15,<0.16",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
